2009-09-23  Frank Warmerdam  <warmerdam@pobox.com>

	* Preparing for 4.7.0 release.

	* nad/makefile.vc: do not attempt to install ntf_r93.gsb by default.

	* src/pj_init.c: Temporarily set locale to "C" to avoid locale
	specific number parsing (#49).

	* src/pj_rho.c: move rho out of structure, threadsafety issue (#41).

	* nmake.opt: improve comments (#50).

	* nad/epsg: regenerated - use more symbolic ellipsoid/datum names, and
	fix EPSG 3857 and 3785 (#51).

	* src/pj_gridlist.c: Implement mutex protection for grid loader/cacher.

	* src/pj_mutex.c: fix up windows support.

	* nad/ntf_r93.gsb: set mime-type to binary so it isn't corrupted on 
	windows systems.

2009-06-17  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_mutex.c: Implement win32 and pthread mutex support.

	* configure, src/Makefile.am: add --without-mutex support to configure

2009-06-16  Frank Warmerdam  <warmerdam@pobox.com>

	* README: Update windows build instructions (#30).

	* nad/epsg: Upgraded to EPSG 7.1. 

2009-05-19  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/testvarious,nad/testdatumfile: split datum file specific
	stuff into testdatumfile, and add kav5 test in testvarious (#40).

2009-05-18  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_sts.c: Remove duplicate division o lp.phi by P->C_p (#40).

2009-05-13  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_imw_p.c: Correct handling of yc in loc_for() (#39).

2009-04-02  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/Makefile.am: Changes to ensure grid shift files are processed
	before running check-local, and to use the local grid shift files
	if available, and to avoid testvarious if grid shift files are
	not available.

	* src: Fix various warnings. 

2009-03-11  Frank Warmerdam  <warmerdam@pobox.com>

	* man/man1: fix Snyder reference (#29)

2009-03-10  Howard Butler <hobu.inc@gmail.com>
	* autogen.sh: Use autogen.sh from libLAS for wider
        platform (OSX, Solaris) compatibility